styles: fix word count icon color on dark mode

--- a/client/app/components/usage/active_authors/ActiveAuthorItem.scss
+++ b/client/app/components/usage/active_authors/ActiveAuthorItem.scss
@@ -62,6 +62,10 @@
     display: flex;
     color: var(--color-contrast);
     font-weight: normal;
+
+    svg path {
+        fill: var(--color-contrast);
+    }
 }
 
 .active-author__icon {
